docroot/themes/humsci/humsci_basic/src/scss/partials/components/_card.scss
@use '../variables/general' as *;
@use '../functions/fonts' as *;
@use '../functions/general' as *;
@use '../functions/animation' as *;
@use '../functions/color' as *;
@use '../mixins/general' as *;
@use '../mixins/breakpoints' as *;
@use '../mixins/theme' as *;
@use '../mixins/icons' as *;
@use '../mixins/text' as *;
@use '../mixins/flex-grid' as *;
@use '../mixins/links' as *;

// Card shared styles.

// Styles for the following patterns:
// - horizontal-card (views and postcard component).
// - vertical-card (views and postcard component).
// - vertical-button-card (views and postcard component).
// - date-stacked-horizontal-card (views only).
// - date-stacked-vertical-card (views only).

$container-small: hb-calculate-rems(576px);
$container-medium: hb-calculate-rems(768px);

// Base styles (views and postcard component).

.hb-card {
  display: flex;
  flex-direction: column;
  container-type: inline-size;
  container-name: card;

  &.hb-vertical-card--accent {
    @include hb-themes(('colorful', 'airy')) {
      border-bottom: hb-calculate-rems(4px) solid color('secondary');
    }

    @include hb-traditional {
      border-bottom: hb-calculate-rems(2px) solid color('secondary');
    }
  }
}

.hb-card--horizontal:has(.hb-card__graphics) {
  @include hb-themes(('colorful', 'airy')) {
    padding: hb-calculate-rems(10px);
  }

  @include hb-traditional {
    padding: hb-calculate-rems(10px);

    @container card (width > #{$container-small}) {
      padding: hb-calculate-rems(12px);
    }

    @container card (width > #{$container-medium}) {
      padding: hb-calculate-rems(16px);
    }
  }

  .hb-card__wrapper {
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: auto auto;

    // stylelint-disable-next-line
    grid-template-areas:
      'a'
      'b';

    @container card (width > #{$container-small}) {
      align-items: center;

      grid-template-columns: repeat(12, 1fr);
      grid-template-rows: auto;

      // Use 5 cols for image by default (views). This is overriden for
      // postcards to use 6 columns.
      // stylelint-disable-next-line
      grid-template-areas: 'a a a a a b b b b b b b';
    }
  }
}

.hb-card--horizontal--right:has(.hb-card__graphics) {
  .hb-card__wrapper {
    @container card (width > #{$container-small}) {
      grid-template-areas: 'b b b b b b b a a a a a';
    }
  }
}

.hb-card__graphics {
  position: relative;

  .hb-vertical-card &,
  .hb-card--date-stacked & {
    @include hb-traditional {
      padding: hb-calculate-rems(10px) hb-calculate-rems(10px) 0;

      @container card (width > #{$container-small}) {
        padding: hb-calculate-rems(16px) hb-calculate-rems(16px) 0;
      }
    }
  }

  .hb-card--horizontal & {
    grid-area: a;

    @include hb-themes(('colorful', 'airy')) {
      @container card (width > #{$container-small}) {
        padding-inline: 0 hb-calculate-rems(20px);
      }
    }
  }

  .hb-card--horizontal--right & {
    @include hb-themes(('colorful', 'airy')) {
      @container card (width > #{$container-small}) {
        padding-inline: hb-calculate-rems(20px) 0;
      }
    }
  }

  .hb-card--horizontal-date-stacked & {
    @include grid-media-min('md') {
      max-width: 100%;
    }
  }

  &--has-date {
    // This ensures there is always enough height for the date tile in case
    // the images is too short (can happen with util classes)
    min-height: hb-calculate-rems(130px);
  }

  // If there is not an image we always want the text to sit next to the date
  // tile. This is also the same when using hb-card-image-* utility classes.
  .hb-card--no-image &,
  [class^='hb-card-image-'] .hb-card--no-image & {
    flex: initial;
    max-width: initial;
    margin-inline-end: 0;
  }
}

.hb-card__img {
  overflow: hidden;

  // override default link styles that might go here
  a {
    display: block;
    background-image: none;

    &:focus,
    &:hover {
      border-bottom: 0 none;

      img {
        transform: scale($hb-image-hover-scale);
      }
    }
  }

  img {
    width: 100%;
    height: auto;
    transform: scale(1);
    transition: hb-transition(transform);
  }

  .hb-media-image {
    margin: 0;
  }
}
/* ... */

